--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "multer-microservice",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "A Multer package NodeJS template",
   "main": "src/index.js",
   "scripts": {
@@ -16,11 +16,12 @@
   "author": "SPLIT VICE",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "file-extension": "^4.0.5",
     "multer": "^1.4.2",
-    "nanoid": "^3.1.23"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.9"
